# ChangeLog for media-video/gcstar
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Sep 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  metadata.xml, -gcstar-1.2.1.ebuild, +gcstar-1.2.2.ebuild:
  Version bump and add LINGUAS support

  15 Sep 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gcstar-1.1.1.ebuild, +gcstar-1.2.1.ebuild:
  Version bump

  29 Aug 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gcstar-0.4.1.ebuild, +gcstar-1.1.1.ebuild:
  Major version bump. Move from media-video to app-misc.

  07 Jan 2007; Jakub Moc <jakub@gentoo.org> gcstar-0.4.1.ebuild:
  The optional stuff clearly is not DEPEND

  03 Nov 2006; Raul Porcel (armin76) <armin76@gmail.com> -gcstar-0.4.ebuild:
  remove old

  07 Oct 2006; Tiziano Müller <dev-zero@gentoo.org> -gcstar-0.2.ebuild,
  -gcstar-0.3.ebuild, +gcstar-0.4.1.ebuild:
  Version bump. Old versions removed.

  04 Sep 2006; Tiziano Müller <gentoo@dev-zero.ch> +gcstar-0.4.ebuild:
  Version bump.

  21 Aug 2006; Tiziano Müller <gentoo@dev-zero.ch> +gcstar-0.3.ebuild:
  Version bump.

  18 Jul 2006; Josu López Fernández <zamorate@zamorate.net>
  gcstar-0.2.ebuild:
  Added ~amd64 and ~ppc keywords

  16 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch> ChangeLog:
  New ebuild for bug 139940
