@@ -1,4 +1,4 @@
 DIST gcstar-1.2.2.tar.gz 2037121 RMD160 fb7cde04bda23f75cd0bec2b3d331b54c75c0ff4 SHA1 cf4b09ad8e5fba1f2b0c1bf2ce5e5c2efacc482a SHA256 eeab4b735e011a41786180c77baa7f4b668313f1791b8f76f9fdb8dbbb5b0d03
-EBUILD gcstar-1.2.2.ebuild 1729 RMD160 2ea6210ea37386393fb4f3533bb270ddfe6847e5 SHA1 5b18aa6abe01ab7b53941794d1f0645b7e7df5e5 SHA256 fc44f68fa2fb7b8dac2b29484e0743710db404210eff3cc2661676e071ea0da3
-MISC ChangeLog 1338 RMD160 f87979b6104d5933403f6292a0724b905a84054c SHA1 6a23bfbaeebb9b4c4266cf85f9fc6b4cc5006a12 SHA256 e55edba975621ab6752bfbecd36059c30968baa2714e72ec4f19b51a5d7a1295
+EBUILD gcstar-1.2.2.ebuild 1816 RMD160 e33dff6bff2b7a2e036dd07d527ba503b6b864ef SHA1 4dda932fff7c65faedf3a4633c457477f8173cf7 SHA256 137926d1b4c775b7f0c65180141acdac258bf18f5b07cf614312629f2b7dd900
+MISC ChangeLog 1449 RMD160 00fc0d57a7c7071d01b446fe653b0c2c728f4e85 SHA1 76ce5f07eab924b42d30348dba67999790ffa9aa SHA256 3a867d4dc998876eb7f61f3832a6ae22d681ded3f7fa10dba9d6930b1d1b2dc3
 MISC metadata.xml 524 RMD160 4d9ced3974593caa9271f47141d857a2029613a2 SHA1 de063ca643a9bdd8e7674ba08ff14a40a1ab0282 SHA256 573345a2c97f639155d775b833572466c6a802b04b1069572fd5d3b3b250b60f
