@@ -2,8 +2,6 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils
-
 DESCRIPTION="GCstar is a personal collections manager."
 HOMEPAGE="http://www.gcstar.org/"
 SRC_URI="http://download.gna.org/gcstar/${P}.tar.gz"
@@ -11,14 +9,14 @@ SRC_URI="http://download.gna.org/gcstar/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="mp3 nls tellico vorbis"
+IUSE="mp3 tellico vorbis"
 
 LANGS="ar bg ca cs de en es fr id it pl pt ro ru sr sv tr"
-for x in ${LANGS} ; do
+for x in "${LANGS}" ; do
 	IUSE="${IUSE} linguas_${x}"
 done
 
-RDEPEND="dev-lang/perl
+DEPEND="dev-lang/perl
 		dev-perl/Archive-Tar
 		dev-perl/Archive-Zip
 		dev-perl/Compress-Zlib
@@ -39,35 +37,43 @@ RDEPEND="dev-lang/perl
 			virtual/perl-Digest-MD5
 			virtual/perl-MIME-Base64 )
 		vorbis? ( dev-perl/Ogg-Vorbis-Header-PurePerl )"
-DEPEND="${RDEPEND}"
+RDEPEND="${DEPEND}"
 
 S="${WORKDIR}/${PN}"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}/lib/gcstar/GCLang"
-	mkdir tmp || die
-	mv ?? tmp
-	if ! use nls ; then
-		mv tmp/EN . || die
-	else
-		for x in ${LANGS} ; do
-			# GCstar uses upper-case language names
-			if use linguas_${x} ; then
-				mv tmp/`echo ${x} | tr 'a-z' 'A-Z'` . || die
-			fi
-		done
-	fi
-	rm -r tmp || die
-}
-
 src_install() {
+	cd "${S}"/lib/gcstar/GCLang
+
+	# English version should be always available so we will keep it
+	mkdir tmp
+	for i in {AR,BG,CA,CS,DE,ES,FR,ID,IT,PL,PT,RO,RU,SR,SV,TR}; do
+		mv ${i} tmp/
+	done
+
+	for x in ${LANGS}; do
+		# GCstar uses upper-case language names
+		if use linguas_${x} ; then
+			mv tmp/$(echo ${x} | tr '[:lower:]' '[:upper:]') .
+		fi
+	done
+
+	rm -rf tmp
+
+	cd "${S}"
 	# otherwise man pages would get installed in /usr/man
 	mv man share
-	./install --prefix="${D}/usr" --noclean --nomenu || die
+
+	./install --prefix="${D}/usr" \
+		--noclean --nomenu || die "install script failed"
+	
 	domenu share/applications/gcstar.desktop
 	newicon share/gcstar/icons/gcstar_64x64.png gcstar.png
+	
 	dodoc CHANGELOG README
-	use linguas_fr && dodoc CHANGELOG.fr README.fr
+	
+	if use linguas_fr; then 
+		dodoc CHANGELOG.fr README.fr
+	fi
+
 	doman share/man/gcstar.1
 }
