@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Sep 2007; <cla@gentoo.org> gcstar-1.2.2.ebuild:
+  Fixed coding standards, removed useless inherit eclass
+
   17 Sep 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
   metadata.xml, -gcstar-1.2.1.ebuild, +gcstar-1.2.2.ebuild:
   Version bump and add LINGUAS support
